# eve-wh

./: pyproject.toml
eve_wh/: __init__.py  calculator.py  models.py
eve_wh/data/: combat_loader.py  combat_sites.yaml  combat_sites_detailed.yaml  common_ships.yaml  loader.py  mining_loader.py  mining_sites.yaml  ore_types.yaml  wave_data_c1c2.yaml  wave_data_c3c4.yaml  wormhole_types.yaml
eve_wh/market/: ore_prices.py
eve_wh/scanner/: parser.py  valuator.py
tests/: test_calculator.py  test_data.py  test_scanner.py
