[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-wh"
version = "0.1.0"
description = "EVE Online wormhole rolling calculator — mass tracking and risk assessment"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["eve_wh*"]

[tool.setuptools.package-data]
eve_wh = ["data/*.yaml"]
